# sequence_back

./: .copier-answers.yml  .gitignore  Cargo.toml  Readme.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: msrv.yml  test.yml
benches/: kmer_counter_init.rs
examples/: benches.rs
implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
sequence_back/: all.html  index.html  sidebar-items.js  type.Kmer.html
sequence_back/cli/: index.html  struct.Command.html
sequence_back/error/: enum.Error.html  index.html  type.Result.html
sequence_back/format/: enum.ReadsFormat.html  index.html  sidebar-items.js
sequence_back/io/: fn.filter_reads.html  index.html  sidebar-items.js
sequence_back/kmer_counter/: index.html  sidebar-items.js  trait.KmerCounterTrait.html  type.KmerCounter.html
sequence_back/kmer_set/: index.html  sidebar-items.js  trait.KmerSetTrait.html  type.KmerSet.html
sequence_back/tokenizer/: fn.get_tokenizer.html  index.html  sidebar-items.js
src/: cli.rs  error.rs  format.rs  io.rs  kmer_counter.rs  kmer_set.rs  lib.rs  main.rs  tokenizer.rs
src/sequence_back/: cli.rs.html  error.rs.html  format.rs.html  io.rs.html  kmer_counter.rs.html  kmer_set.rs.html  lib.rs.html  tokenizer.rs.html
tests/: functional.rs
tests/common/: constant.rs  generator.rs  io.rs  mod.rs
(+15 files in other folders)
